--- a/list.html
+++ b/list.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/cabin-fontfacekit/stylesheet.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="css/list.css" type="text/css" media="screen" />
 <script type="text/javascript" src="js/jquery-1.6.1.min.js"></script>
+<script type="text/javascript" src="js/googleSpreadsheetParser.js"></script>
 <script type="text/javascript" src="js/list.js"></script>
 </head>
 <body>
