Major updates to the front page

--- a/index.htm
+++ b/index.htm
@@ -86,6 +86,8 @@
 					</ul>
 				</li>
 			</ul>
+		   <a href='#' id="prev" class='scroll'><img src="images/scroll-prev.png"/></a>
+			<a href='#' id="next" class='scroll'><img src="images/scroll-next.png"/></a>
 		</div>
 	</div>
 	<div id="data">&nbsp;</div>
