--- a/index.htm
+++ b/index.htm
@@ -89,6 +89,11 @@
 		   <a href='#' id="prev" class='scroll'><img src="images/scroll-prev.png"/></a>
 			<a href='#' id="next" class='scroll'><img src="images/scroll-next.png"/></a>
 		</div>
+		<a id="external-btn" href='#'>
+			<!--<a href="#"><h3>External</h3></a>-->
+		</a>
+		<div id="external-container">
+		</div>
 	</div>
 	<div id="data">&nbsp;</div>
 </body>
