Created External Site...fixed some bugs

--- a/index.htm
+++ b/index.htm
@@ -86,15 +86,21 @@
 					</ul>
 				</li>
 			</ul>
-		   <a href='#' id="prev" class='scroll'><img src="images/scroll-prev.png"/></a>
-			<a href='#' id="next" class='scroll'><img src="images/scroll-next.png"/></a>
+		   <a href='#' id="prev" class='scroll action'><img src="images/scroll-prev.png"/></a>
+			<a href='#' id="next" class='scroll action'><img src="images/scroll-next.png"/></a>
 		</div>
-		<a id="external-btn" href='#'>
-			<!--<a href="#"><h3>External</h3></a>-->
-		</a>
+		<a id="external-btn" class='action' href='#'><h3>Resources</h3></a>
 		<div id="external-container">
+		  <h3>Resources</h3>
+		  <a id="external-close" class='action close' href='#'><img src="images/close.png"></a>
+		  <ul></ul>
+		</div>
+		<div id="popup-container">
+		  <h2></h2>
+		  <a id="popup-close" class='action close' href='#'><img src="images/close.png"></a>
 		</div>
 	</div>
 	<div id="data">&nbsp;</div>
+	<div id="popup-bg"></div>
 </body>
 </html>
